--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <p>Hello</p>
 
-<p>How can I help you?</p>
+<p>How can I help you?<img src="help-icon.png" alt="Help Icon"/></p>
 
-<button>Submit</button>
+
 
 </body>
 </html>
